# project-5g

./: rooter-setup-notes.md
atcmd/: Cargo.toml
atcmd/.cargo/: config
atcmd/src/: main.rs
scanner/: create_viz.py  parse_logs.py  rotator.py  scanner.py
winch/: tower.html
